2004-11-05  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/pvsbasic.c: New file and opcodes

	* Engine/fgens.c: Added gen43

2004-11-02  John Fitch  <jpff@eriboll.local.>

	* Top/threads.c: OSX threads like Linux

	* InOut/rtpa.c: Use callback stuff for OSX

2004-10-24  Michael Gogins <gogins@pipeline.com>

	* Renamed libsndfile.dll.0.0.19.
    
        * Updated documentation to provide improved directions for extending
	Csound with builtin or plugin opcodes.   
    
        * Fixed badly formatted tables in documentation.
    
        * Improved API documentation with simple examples.


2004-10-26  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugrw1.c: Simplified some of the error reporting

	* H/ugrw1.h (zkwm): and remove value from domix

2004-10-25  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugens6.c (cmbset): Round rather than truncate

2004-10-24  Michael Gogins <gogins@pipeline.com>

	* Updated build system for gcc 3.4.2 (candidate), changed some
	flags to avoid DLL relocation errors on Windows that caused
	problems with restarting CsoundVST, and with debugging.

	* First draft of complete Csound 5 manual with Kevin Conder
	documentation included.  There are as yet many errors with tables
	and graphics, but all (or almost all) of the text appears to be
	good.

2004-10-21  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugens6.c (delset, delrset): Round not truncate
	(deltap): Round not truncate

2004-10-20  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugens6.c (delrset): NULL list of delays for safety, 

2004-09-12  Michael Gogins <gogins@pipeline.com>

	* Added csound::Score::getCsoundScore method in CsoundVST for
	easier use of algorithmic composition classes in other
	Csound-based systems.

	* Updated csound.pdf with API documentation.

	* Restored real-time audio code to more functional version.

2004-10-16  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/sfont.c (Sfplist, filter_string): Removed static array
	to local in caller
